--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "clsx": "^1.2.1",
     "katex": "^0.16.8",
     "postcss": "^8.4.25",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
