--- a/package.json
+++ b/package.json
@@ -16,25 +16,27 @@
   "dependencies": {
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
-    "@docusaurus/types": "^2.4.1",
     "@mdx-js/react": "^1.6.22",
-    "@types/react": "^17.0.62",
-    "autoprefixer": "^10.4.14",
     "clsx": "^1.2.1",
     "katex": "^0.16.8",
-    "postcss": "^8.4.25",
-    "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.4.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "tailwindcss": "^3.3.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.1",
+    "@docusaurus/types": "^2.4.1",
+    "@swc/core": "^1.3.69",
     "@tsconfig/docusaurus": "^2.0.0",
     "@types/katex": "^0.16.1",
+    "@types/react": "^17.0.62",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.25",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.0",
+    "swc-loader": "^0.2.3",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.1.6"
   },
   "browserslist": {
