--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
     "@mdx-js/react": "^1.6.22",
+    "@tanstack/react-query": "^4.29.23",
     "clsx": "^1.2.1",
     "katex": "^0.16.8",
     "prism-react-renderer": "^1.3.5",
