--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@tanstack/react-query": "^4.29.23",
     "clsx": "^1.2.1",
     "katex": "^0.16.8",
+    "mathlive": "^0.95.0",
+    "nerdamer": "^1.1.13",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -55,5 +57,12 @@
   },
   "engines": {
     "node": ">=16.14"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "react": "^17"
+      }
+    }
   }
 }
